--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.47.3",
+    "@raycast/utils": "^1.4.17",
     "node-fetch": "^3.3.0",
     "openai": "^3.1.0"
   },
